<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SkillList">

    <View
        android:id="@+id/topView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/skill_list"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchskill1"
            android:text="@string/skill1"
            app:layout_constraintEnd_toEndOf="parent"
            android:checked="false"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/switchStyle" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchskill2"
            android:text="@string/skill2"
            app:layout_constraintEnd_toEndOf="parent"
            android:checked="false"
            app:layout_constraintTop_toBottomOf="@+id/switchskill1"
            style="@style/switchStyle"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchskill3"
            android:text="@string/skill3"
            style="@style/switchStyle"
            app:layout_constraintEnd_toEndOf="parent"
            android:checked="false"
            app:layout_constraintTop_toBottomOf="@+id/switchskill2" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchskill4"
            android:text="@string/skill4"
            style="@style/switchStyle"
            app:layout_constraintEnd_toEndOf="parent"
            android:checked="false"
            app:layout_constraintTop_toBottomOf="@+id/switchskill3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_Update_Skills"
        android:layout_marginBottom="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomView" />

    <View
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>