<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.CartaPokemonActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryVariant">

            <androidx.cardview.widget.CardView
                android:id="@+id/activity_carta_pokemon_card_raridade"
                style="@style/style_cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/activity_carta_pokemon_raridade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/text_size_small"
                    android:layout_marginVertical="2dp"
                    android:text="@string/rarity"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="italic|bold" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/activity_carta_pokemon_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/name"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/activity_carta_pokemon_card_raridade"
                app:layout_constraintTop_toTopOf="@id/activity_carta_pokemon_imagem_tipo" />

            <TextView
                android:id="@+id/activity_carta_pokemon_hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/activity_carta_pokemon_imagem_tipo"
                app:layout_constraintEnd_toStartOf="@id/activity_carta_pokemon_poder" />

            <TextView
                android:id="@+id/activity_carta_pokemon_poder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/power"
                android:textSize="30dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/activity_carta_pokemon_imagem_tipo"
                app:layout_constraintTop_toTopOf="@id/activity_carta_pokemon_imagem_tipo" />

            <ImageView
                android:id="@+id/activity_carta_pokemon_imagem_tipo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/simbolo_de_pokemon_tipo_fogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/activity_carta_pokemon_imagem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_image"
                android:cropToPadding="true"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/growlithe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_carta_pokemon_imagem_tipo" />

            <androidx.cardview.widget.CardView
                android:id="@+id/activity_carta_pokemon_descricao_imagem"
                style="@style/style_cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/gray"
                app:layout_constraintEnd_toEndOf="@id/activity_carta_pokemon_imagem"
                app:layout_constraintStart_toStartOf="@id/activity_carta_pokemon_imagem"
                app:layout_constraintTop_toBottomOf="@id/activity_carta_pokemon_imagem">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/text_size_small"
                    android:text="@string/image_description"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="italic|bold" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/activity_carta_pokemon_descricao"
                style="@style/style_atributos"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="@+id/activity_carta_pokemon_imagem"
                app:layout_constraintStart_toStartOf="@+id/activity_carta_pokemon_imagem"
                app:layout_constraintTop_toBottomOf="@+id/activity_carta_pokemon_descricao_imagem" />

            <androidx.cardview.widget.CardView
                android:id="@+id/activity_carta_pokemon_card_descricao"
                style="@style/style_cardView"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="@id/activity_carta_pokemon_descricao"
                app:layout_constraintStart_toStartOf="@+id/activity_carta_pokemon_descricao"
                app:layout_constraintTop_toBottomOf="@+id/activity_carta_pokemon_descricao">

                <TextView
                    android:id="@+id/activity_carta_pokemon_txt_descricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_size_small"
                    android:text="@string/description_text"
                    android:textSize="@dimen/text_size_medium" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/activity_carta_pokemon_habilidades"
                style="@style/style_atributos"
                android:text="@string/skills"
                app:layout_constraintEnd_toEndOf="@id/activity_carta_pokemon_descricao"
                app:layout_constraintStart_toStartOf="@+id/activity_carta_pokemon_descricao"
                app:layout_constraintTop_toBottomOf="@+id/activity_carta_pokemon_card_descricao" />

            <androidx.cardview.widget.CardView
                android:id="@+id/activity_carta_pokemon_card_habilidades"
                style="@style/style_cardView"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="@id/activity_carta_pokemon_habilidades"
                app:layout_constraintStart_toStartOf="@+id/activity_carta_pokemon_habilidades"
                app:layout_constraintTop_toBottomOf="@+id/activity_carta_pokemon_habilidades">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/activity_carta_pokemon_txt_habilidades"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_size_small"
                        android:layout_weight="1"
                        android:text="@string/skills_default"
                        android:textSize="@dimen/text_size_medium" />

                    <Button
                        android:id="@+id/activity_carta_pokemon_botao_editar_habilidades"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_20dp"
                        android:text="@string/button_edit" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/activity_carta_pokemon_botao_tema"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_20dp"
                android:text="@string/button_theme_scarlet"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>

